--- a/parallex site/parallex.css
+++ b/parallex site/parallex.css
@@ -76,6 +76,20 @@ body,html{
 
 }
 
+ ul{
+    background-color: transparent;
+    display: flex;
+    margin: 50px;
+    justify-content: space-between;
+    list-style: none;
+}
+li{
+    background-color: rgba(0, 0, 0, 0.219);
+    border-radius: 5%;
+    padding: 10px;
+    margin: 15px;
+}
+
 .a{
     background-color: burlywood;
     color: rgba(0, 0, 0, 0.342);
@@ -83,7 +97,23 @@ body,html{
     width: fit-content;
 }
 
-@media(){max-width: 568px;
+.footer{
+    margin-top: 10px;
+    padding: 5%  8%;
+    background-color: turquoise;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer .footerlists {
+    display: list-item;
+    margin: 5px;
+    justify-content: unset;
+    margin: 0;
+
+}
+
+@media(max-width: 568px){
     .img2,.img3,.img4,.img5{
         background-attachment: scroll;
     }
