Content Page Responsiveness, Working of NavBar

--- a/parallex site/ContactUs.css
+++ b/parallex site/ContactUs.css
@@ -1,5 +1,7 @@
 
-
+body{
+    background: cornsilk;
+}
 
  .header{
    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
@@ -36,11 +38,7 @@
   
 
 
-
-.main_col{
-    float: left;
-    width: 70%;
-}
+  /* Form */
 
 .fbackground{
     position: relative;
@@ -49,6 +47,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 .fhead{
@@ -68,52 +68,105 @@
     width: 80%;
     padding: 10px;
     margin: auto;
+   
 }
 
 form{
     color: white;
-    padding:10px
+    padding:10px;
+}
+
+.form_head{
+    margin-left: 25px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    width: 100%;
+    font-size: 35px;
+    font-weight: 800;
+    text-decoration: underline;
+}
+
+.lab{
+    margin-left: 35px;
+    font-size: 20px;
+    color: rgb(247, 253, 253);
+}
+.inp_box{
+    margin-left: 30px;
+    margin-bottom:15px;
+    margin-top:15px ;
+    line-height: 40px;
+    border-radius: 6px;
+    padding: 0, 5%;
+    font-size: 16px;
+    color:#555;
 }
 
 
-.sidebar{
-    float: right;
-    background-color: blue;
-    width: 30%;
-}.main_col{
-    float: left;
-    width: 70%;
+
+textarea{
+    margin-left: 30px;
+    width: 50%;
+    font-size: 16px;
+    color: #555;
+    border-radius: 6px;
 }
 
-.fbackground{
-    position: relative;
-    background-image: url(images/Taj.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+/* Social Media Buttons */
+.socials_heading{
+    margin-left:30px ;
 }
 
-.fhead{
-    position: relative;
-    width: 80%;
-    background-color: rgb(0,0,0,0.8);
-    margin: auto;
-    color:#ffffff ;
+.socials{
+    margin: 10px 30px;
+    padding: 20px 20%;
+    background: burlywood;
+    display: block;
+}
+
+.socials ul{
+    display: flex;  
+    justify-content: space-evenly; 
+}
+
+.socials ul li{
+    display: inline;
+    font-size: 30px;
+}
+
+.fa {
+    padding: 30px;
     text-align: center;
-    padding: 10px ;
-    border-radius: 15px 15px 0px 0px;
-}
+    text-decoration: none;
+    border-radius: 50%;
+  }
 
-.main{
-    position: relative;
-    background-color: rgba(0, 0, 0, 0.6);
-    width: 80%;
-    padding: 10px;
-    margin: auto;
-}
+  .fa:hover {
+    opacity: 0.7;
+  }
+
+  /*Instagram*/
+  .fa-instagram {
+    background: #125688;
+    color: white;
+  }
+
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+
+  .fa-youtube {
+    background: #bb0000;
+    color: white;
+  }
 
 
-
+ 
 
 
