--- a/parallex site/contentpages.css
+++ b/parallex site/contentpages.css
@@ -70,8 +70,7 @@
 }
 
 .show-menu-button{
-    top: 30px;
-    right: 30px;
+    right: 10%;
     position: absolute;}
 
 .show-menu-button:hover,
@@ -149,7 +148,37 @@
 
 
 
+ /*Footer*/
 
+ .footer{
+    margin-top: 10px;
+    padding: 5%  8%;
+    background-color: turquoise;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer .footerlists {
+    display: list-item;
+    margin: 5px;
+    justify-content: unset;
+    margin: 0;
+
+}
+
+.footer ul{
+    background-color: transparent;
+    display: flex;
+    margin: 50px;
+    justify-content: space-between;
+    list-style: none;
+}
+.footer ul li{
+    background-color: rgba(0, 0, 0, 0.219);
+    border-radius: 5%;
+    padding: 10px;
+    margin: 15px;
+}
 
 
 
@@ -193,5 +222,18 @@
         display: list-item;
         transition: 0.7s;
         
+    }
+
+    .wrapper .top_nav .left ul li {
+        align-content: center;
+        padding: 20px;
+        
+    }
+   
+
+    
+    #chk:checked ~  .left ul{
+        right: 0;  
+        z-index: 1;
     }
 }
